<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_GearAxis" Id="{dd7a972b-7909-0d2a-2b6a-7781f77a0521}">
    <Declaration><![CDATA[TYPE ST_GearAxis :
STRUCT
    nIndex: UINT := 0; //Index of the master axis
    fRatio: LREAL := 0; //Gearing ratio between master axis and this one
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>