<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_McStatus" Id="{1a8fddd6-908f-035b-2a90-eba720042f6c}">
    <Declaration><![CDATA[TYPE ST_McStatus :
STRUCT
    Done: BOOL;
    Busy: BOOL;
    Active: BOOL;
    InVelocity: BOOL;
    CommandAborted: BOOL;
    Error: BOOL;
    ErrorID: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>